# cmdcreate

./: .gitignore  .gitmodules  .kateproject.notes  .markdownlint.json  .prettierrc  .pylintrc  .shellcheckrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING  Cargo.toml  LICENSE  LICENSE.md  README.md  SECURITY.md  TODO.md  aur_update.sh  changes.md  codebook.toml  config_example.toml  format.sh  install.sh  package.sh  update_tag.sh
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: bash.yml  markdown.yml  pylint.yml  python.yml  release.yml  rust-clippy.yml  rust.yml
dev/: clean.sh  format.sh  install.sh  setup_env.sh  test.sh  uninstall.sh  update_tag.sh
dev_installing/: install.sh  uninstall.sh
docs/: README.md  about.md  commands.md  configurations.md  developing.md  structure.md  updates.md
docs/resources/: config_example.toml
package/: README.md  create_bin.sh  create_deb.sh  create_rpm.sh  format.sh  package.sh
src/: configs.rs  init.rs  lib.rs  logger.rs  main.rs  meta.rs  parse.rs  usage.rs  version.rs
src/cmds/: create.rs  display.rs  edit.rs  favorite.rs  list.rs  mod.rs  remove.rs  rename.rs  repair.rs  search.rs  tools.rs  update.rs  upgrader.rs
src/cmds/backup/: export.rs  import.rs  mod.rs
src/commands/: clean.rs  config.rs  create.rs  display.rs  doc.rs  edit.rs  export.rs  favorite.rs  import.rs  list.rs  mod.rs  remove.rs  rename.rs  repair.rs  search.rs  tools.rs  update.rs
src/commands/backup/: export.rs  import.rs
src/commands/config/: config_add.rs  config_remove.rs  list.rs  main.rs  mod.rs  verify.rs
src/commands/config/actions/: add.rs  mod.rs  remove.rs
src/commands/core/: create.rs  display.rs  edit.rs  list.rs  mod.rs  remove.rs  rename.rs  search.rs
src/commands/core/backup_actions/: export.rs  import.rs  mod.rs
src/commands/core/favorite/: add_favorite.rs  main.rs  mod.rs  remove_favorite.rs
src/commands/updater/: check.rs  interactive.rs  main.rs  mod.rs
src/commands/updater/update_methods/: aur.rs  mod.rs  package.rs  source.rs
src/commands/updater/update_methods/source/: consts.rs  dependencies.rs  main.rs  mod.rs
src/core/: init.rs  mod.rs
src/core/configs/: init.rs  load.rs  mod.rs
src/core/logger/: consts.rs  main.rs  mod.rs  utils.rs  verbose.rs
src/core/meta/: license.rs  mod.rs  project.rs
src/core/meta/version/: build.rs  consts.rs  display_info.rs  mod.rs
src/core/parser/: mod.rs  parse.rs  usage.rs  validate_args.rs
src/utils/: colors.rs  fs.rs  git.rs  io.rs  misc.rs  mod.rs  msgs.rs  net.rs  sys.rs
src/utils/fs/: core.rs  init.rs  misc.rs  mod.rs  paths.rs
src/utils/fs/core/: creation.rs  mod.rs  read_write.rs
src/utils/sys/: arguments.rs  command.rs  cpu.rs  distro.rs  env.rs  mod.rs
testing/: README.md  install.sh  lib.py  main.py  pyproject.toml  shared.py  test.py  uninstall.sh
testing/features/: lib.py  main.py  shared.py
testing/features/lib/: path.py  sys.py
testing/features/scripts/: backup.py  create.py  display.py  edit.py  listandfavorite.py  remove.py  rename.py  repair.py  search.py
testing/lib/: path.py
testing/scripts/: backup.py  create.py  display.py  edit.py  listandfavorite.py  remove.py  rename.py  repair.py  search.py
testing/src/: colors.py  io_utils.py  sys_utils.py  test_features.py
testing/src/tests/: init_tests.py  run_tests.py
tests/: create.rs
(+4 files in other folders)
