# Copyright (C) 2026 Owen Debiasio
# Licensed under the GNU General Public License v3.0 or later.
# Full notice available in the root README.md or COPYING file.

[package]
name = "cmdcreate"
license = "GPL-3.0-or-later"
version = "1.1.3"
edition = "2024"
authors = ["Owen Debiasio <owen.debiasio@gmail.com>"]
repository = "https://github.com/owen-debiasio/cmdcreate"
readme = "README.md"

[dependencies]
reqwest = { version = "0.12.28", features = ["blocking", "json"] }
serde_json = "1.0"
toml = "1.0.3"
chrono = "0.4.43"
rustix = { version = "1.1.4", features = ["process"] }
anyhow = "1.0.102"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = "deny"
nursery = "deny"
perf = "deny"
complexity = "warn"
style = "warn"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
incremental = true
