# SPDX-License-Identifier: GPL-3.0-or-later
# Copyright (C) 2026 Owen Debiasio
# Licensed under the GNU General Public License v3.0 or later.
# Full notice available in the root README.md or COPYING file.

[package]
name = "cmdcreate"
version = "1.1.4"
authors = ["Owen Debiasio <your-email@example.com>"]
edition = "2021"
license = "GPL-3.0-or-later"
description = "Create your own custom commands for your convenience"
repository = "https://github.com/owen-debiasio/cmdcreate"

[dependencies]
reqwest = { version = "0.12.28", features = ["blocking", "json"] }
serde_json = "1.0"
toml = "1.0.3"
chrono = "0.4.43"
rustix = { version = "1.1.4", features = ["process"] }
anyhow = "1.0.102"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = "deny"
nursery = "deny"
perf = "deny"
complexity = "warn"
style = "warn"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
incremental = true
