# SPDX-License-Identifier: GPL-3.0-or-later
# Copyright (C) 2026 Owen Debiasio
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.

[package]
name = "cmdcreate"
version = "1.2.0"
authors = ["Owen Debiasio <owen.debiasio@gmail.com>"]
edition = "2024"
license = "GPL-3.0-or-later"
description = "Create your own custom commands for your convenience"
repository = "https://github.com/owen-debiasio/cmdcreate"

[dependencies]
reqwest = { version = "0.12.28", features = ["blocking", "json"] }
serde_json = "1.0"
toml = "1.0.6"
chrono = "0.4.43"
rustix = { version = "1.1.4", features = ["process"] }
anyhow = "1.0.102"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = "deny"
nursery = "deny"
perf = "deny"
complexity = "warn"
style = "warn"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
incremental = true
